--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -126,6 +126,14 @@ pull_request_rules:
       backport:
         branches:
           - release/v7.8.x
+  - name: backport patches to v7.9.x branch
+    conditions:
+      - base=main
+      - label=backport-to-v7.9.x
+    actions:
+      backport:
+        branches:
+          - release/v7.9.x
   - name: backport patches to v8.4.x branch
     conditions:
       - base=main
@@ -142,6 +150,14 @@ pull_request_rules:
       backport:
         branches:
           - release/v8.5.x
+  - name: backport patches to v8.6.x branch
+    conditions:
+      - base=main
+      - label=backport-to-v8.6.x
+    actions:
+      backport:
+        branches:
+          - release/v8.6.x
   - name: backport patches to v10.0.x branch
     conditions:
       - base=main
