--- a/.github/workflows/build-wasm-simd-image-from-tag.yml
+++ b/.github/workflows/build-wasm-simd-image-from-tag.yml
@@ -1,102 +1,16 @@
-name: Build Wasm Simd Image
-on:
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: 'The tag of the image to build'
-        required: true
-        type: string
+#!/bin/bash
 
-env:
-  REGISTRY: ghcr.io
-  ORG: cosmos
-  IMAGE_NAME: ibc-go-wasm-simd
-  GIT_TAG: "${{ inputs.tag }}"
+set -eou pipefail
 
-jobs:
-  build-image-at-tag:
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - os: ubuntu-24.04
-            platform: linux/amd64
-          - os: ubuntu-24.04-arm
-            platform: linux/arm64
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-         ref: "${{ env.GIT_TAG }}"
-         fetch-depth: 0
+# build_wasm_image extracts the correct libwasm version and checksum
+# based on the go.mod and builds a docker image with the provided tag.
+function build_wasm_image(){
+  local version="$(scripts/get-libwasm-version.sh --get-version)"
+  local checksum="$(scripts/get-libwasm-version.sh --get-checksum)"
+  docker build . -t "${1}" -f modules/light-clients/08-wasm/Dockerfile --build-arg LIBWASM_VERSION=${version} --build-arg LIBWASM_CHECKSUM=${checksum}
+}
 
-      # TODO: #7885 Get rid of this script, it is super unecessary and can probably be done in the Dockerfile or a bash script
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-      - name: Install dependencies
-        run: make python-install-deps
-      - name: Get arguments
-        run: echo "LIBWASM_VERSION=$(scripts/get-libwasm-version.py --get-version)" >> $GITHUB_ENV
+# default to latest if no tag is specified.
+TAG="${1:-ibc-go-wasm-simd:latest}"
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
-        with:
-           registry: ${{ env.REGISTRY }}
-           username: ${{ github.actor }}
-           password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Build and push
-        id: build
-        uses: docker/build-push-action@v6
-        with:
-          platforms: ${{ matrix.platform }}
-          file: modules/light-clients/08-wasm/Dockerfile
-          build-args: LIBWASM_VERSION=${{ env.LIBWASM_VERSION }}
-          outputs: type=image,"name=${{ env.REGISTRY }}/${{ env.ORG }}/${{ env.IMAGE_NAME }}",push-by-digest=true,name-canonical=true,push=true
-
-      - name: Export digest
-        run: |
-          mkdir -p ${{ runner.temp }}/digests
-          digest="${{ steps.build.outputs.digest }}"
-          touch "${{ runner.temp }}/digests/${digest#sha256:}"
-
-      - name: Upload digest
-        uses: actions/upload-artifact@v4
-        with:
-          name: digests-${{ matrix.os }} # If we end up running more builds on the same OS, we need to differentiate more here
-          path: ${{ runner.temp }}/digests/*
-          if-no-files-found: error
-          retention-days: 1
-
-  merge:
-    runs-on: depot-ubuntu-22.04-4
-    needs:
-      - build-image-at-tag
-    steps:
-      - name: Download digests
-        uses: actions/download-artifact@v4
-        with:
-          path: ${{ runner.temp }}/digests
-          pattern: digests-*
-          merge-multiple: true
-
-      - name: Get docker tag
-         # remove all `/` or `+` characters from the docker tag and replace them with a -.
-         # this ensures the docker tag is valid.
-        run: echo "DOCKER_TAG=$(echo $GIT_TAG | sed 's/[^a-zA-Z0-9\.]/-/g')" >> $GITHUB_ENV
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
-        with:
-           registry: ${{ env.REGISTRY }}
-           username: ${{ github.actor }}
-           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create manifest list and push
-        working-directory: ${{ runner.temp }}/digests
-        run: |
-          docker buildx imagetools create --tag ${{ env.REGISTRY }}/${{ env.ORG }}/${{ env.IMAGE_NAME }}:${{ env.DOCKER_TAG }} $(printf '${{ env.REGISTRY }}/${{ env.ORG }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
+build_wasm_image "${TAG}"
