--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,6 @@
 # CODEOWNERS: https://help.github.com/articles/about-codeowners/
 
 *       @AdityaSripal @gjermundgaraba @srdtrk
+/docs/  @womensrights
 
 # Our appreciation and gratitude to past code owners: @fedekunze @seantking @tmsdkeys @charleenfei @crodriguezvega @colin-axner @chatton @bznein @DimitrisJim @damiannolan
