--- a/e2e/ci-e2e-config.yaml
+++ b/e2e/ci-e2e-config.yaml
@@ -60,6 +60,6 @@ upgrades:
   - planName: "v8.1"
     tag: "v8.1.0"
   - planName: "v10"
-    tag: "v10.0.0"
+    tag: "main" # TODO: Update with correct tag as soon as we have a release
   - planName: "ibcwasm-v8"
     tag: "v8.0.0-e2e-upgrade"
