update golangci-lint version

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,7 +19,7 @@ linters:
     - revive
     - staticcheck
     - stylecheck
-    - tenv
+    - usetesting
     - thelper
     - typecheck
     - unconvert
