--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -18,13 +18,12 @@ jobs:
     steps:
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: "1.23"
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6.5.2
+        uses: golangci/golangci-lint-action@v7
         with:
-          version: v1.62
+          version: v2.0
           only-new-issues: true
-          args: --timeout 10m
