--- a/e2e/sample.config.extended.yaml
+++ b/e2e/sample.config.extended.yaml
@@ -23,8 +23,24 @@ chains:
     tag: main # override with CHAIN_A_TAG
     binary: simd # override with CHAIN_BINARY
 
-    # the entry at index 1 corresponds to CHAIN_B
+  # the entry at index 1 corresponds to CHAIN_B
   - chainId: chainB-1
+    numValidators: 4
+    numFullNodes: 1
+    image: ghcr.io/cosmos/ibc-go-simd # override with CHAIN_IMAGE
+    tag: main # override with CHAIN_B_TAG
+    binary: simd # override with CHAIN_BINARY
+  
+  # the entry at index 2 corresponds to CHAIN_C
+  - chainId: chainC-1
+    numValidators: 4
+    numFullNodes: 1
+    image: ghcr.io/cosmos/ibc-go-simd # override with CHAIN_IMAGE
+    tag: main # override with CHAIN_B_TAG
+    binary: simd # override with CHAIN_BINARY
+  
+  # the entry at index 3 corresponds to CHAIN_D
+  - chainId: chainD-1
     numValidators: 4
     numFullNodes: 1
     image: ghcr.io/cosmos/ibc-go-simd # override with CHAIN_IMAGE
