--- a/e2e/sample.config.extended.yaml
+++ b/e2e/sample.config.extended.yaml
@@ -36,7 +36,7 @@ chains:
     numValidators: 4
     numFullNodes: 1
     image: ghcr.io/cosmos/ibc-go-simd # override with CHAIN_IMAGE
-    tag: main # override with CHAIN_B_TAG
+    tag: main # override with CHAIN_C_TAG
     binary: simd # override with CHAIN_BINARY
   
   # the entry at index 3 corresponds to CHAIN_D
@@ -44,7 +44,7 @@ chains:
     numValidators: 4
     numFullNodes: 1
     image: ghcr.io/cosmos/ibc-go-simd # override with CHAIN_IMAGE
-    tag: main # override with CHAIN_B_TAG
+    tag: main # override with CHAIN_D_TAG
     binary: simd # override with CHAIN_BINARY
 
 # activeRelayer must match the id of a relayer specified in the relayers list below.
