--- a/e2e/ci-e2e-config.yaml
+++ b/e2e/ci-e2e-config.yaml
@@ -28,6 +28,20 @@ chains:
     numFullNodes: 1
     image: ghcr.io/cosmos/ibc-go-simd # override with CHAIN_IMAGE
     binary: simd # override with CHAIN_BINARY
+  
+  # the entry at index 2 corresponds to CHAIN_C
+  - chainId: chainC-1
+    numValidators: 4
+    numFullNodes: 1
+    image: ghcr.io/cosmos/ibc-go-simd # override with CHAIN_IMAGE
+    binary: simd # override with CHAIN_BINARY
+
+  # the entry at index 3 corresponds to CHAIN_D
+  - chainId: chainD-1
+    numValidators: 4
+    numFullNodes: 1
+    image: ghcr.io/cosmos/ibc-go-simd # override with CHAIN_IMAGE
+    binary: simd # override with CHAIN_BINARY
 
 # activeRelayer must match the id of a relayer specified in the relayers list below.
 activeRelayer: hermes # override with RELAYER_ID
