--- a/.github/workflows/e2e-manual-simd.yaml
+++ b/.github/workflows/e2e-manual-simd.yaml
@@ -16,8 +16,9 @@ on:
           - TestInterchainAccountsGroupsTestSuite
           - TestInterchainAccountsGovTestSuite
           - TestAuthzTransferTestSuite
+          - TestForwardTransferSuite
       chain-image:
-        description: 'The image to use for chain A'
+        description: 'The image to use for chains'
         required: true
         type: string
         default: "ghcr.io/cosmos/ibc-go-simd"
@@ -49,6 +50,34 @@ on:
         description: 'Specify an arbitrary tag for chain B'
         required: false
         type: string
+      chain-c-tag:
+        description: 'The tag to use for chain C'
+        required: true
+        type: choice
+        default: main
+        options:
+          - main
+          - v10.0.0
+          - v8.7.0
+          - v7.10.0
+      chain-c-tag-override:
+        description: 'Specify an arbitrary tag for chain C'
+        required: false
+        type: string
+      chain-d-tag:
+        description: 'The tag to use for chain D'
+        required: true
+        type: choice
+        default: main
+        options:
+          - main
+          - v10.0.0
+          - v8.7.0
+          - v7.10.0
+      chain-d-tag-override:
+        description: 'Specify an arbitrary tag for chain A'
+        required: false
+        type: string
 
 jobs:
   e2e-manual:
@@ -57,4 +86,6 @@ jobs:
       chain-image: "${{ github.event.inputs.chain-image }}"
       chain-a-tag: "${{ github.event.inputs.chain-a-tag-override || github.event.inputs.chain-a-tag }}"
       chain-b-tag: "${{ github.event.inputs.chain-b-tag-override || github.event.inputs.chain-b-tag }}"
+      chain-c-tag: "${{ github.event.inputs.chain-c-tag-override || github.event.inputs.chain-c-tag }}"
+      chain-d-tag: "${{ github.event.inputs.chain-d-tag-override || github.event.inputs.chain-d-tag }}"
       test-entry-point:  "${{ github.event.inputs.test-entry-point }}"
