--- a/.github/workflows/e2e-upgrade.yaml
+++ b/.github/workflows/e2e-upgrade.yaml
@@ -20,6 +20,8 @@ jobs:
       chain-image: ghcr.io/cosmos/ibc-go-simd
       chain-a-tag: v6.1.0
       chain-b-tag: v6.1.0
+      chain-c-tag: v6.1.0
+      chain-d-tag: v6.1.0
       upgrade-plan-name: "v7"
       test-entry-point:  "TestUpgradeTestSuite"
       test: "TestV6ToV7ChainUpgrade"
@@ -31,6 +33,8 @@ jobs:
       chain-image: ghcr.io/cosmos/ibc-go-simd
       chain-a-tag: v7.0.0
       chain-b-tag: v7.0.0
+      chain-c-tag: v7.0.0
+      chain-d-tag: v7.0.0
       upgrade-plan-name: "v7.1"
       test-entry-point:  "TestUpgradeTestSuite"
       test: "TestV7ToV7_1ChainUpgrade"
@@ -42,6 +46,8 @@ jobs:
       chain-image: ghcr.io/cosmos/ibc-go-simd
       chain-a-tag: v7.10.0
       chain-b-tag: v7.10.0
+      chain-c-tag: v7.10.0
+      chain-d-tag: v7.10.0
       upgrade-plan-name: "v8"
       test-entry-point:  "TestUpgradeTestSuite"
       test: "TestV7ToV8ChainUpgrade"
@@ -53,6 +59,8 @@ jobs:
       chain-image: ghcr.io/cosmos/ibc-go-simd
       chain-a-tag: v8.0.0
       chain-b-tag: v8.0.0
+      chain-c-tag: v8.0.0
+      chain-d-tag: v8.0.0
       upgrade-plan-name: "v8.1"
       test-entry-point:  "TestUpgradeTestSuite"
       test: "TestV8ToV8_1ChainUpgrade"
@@ -64,6 +72,8 @@ jobs:
       chain-image: ghcr.io/cosmos/ibc-go-simd
       chain-a-tag: v8.7.0
       chain-b-tag: v8.7.0
+      chain-c-tag: v8.7.0
+      chain-d-tag: v8.7.0
       upgrade-plan-name: "v10"
       test-entry-point:  "TestUpgradeTestSuite"
       test: "TestV8ToV10ChainUpgrade"
@@ -75,6 +85,8 @@ jobs:
       chain-image: ghcr.io/cosmos/ibc-go-simd
       chain-a-tag: v8.7.0
       chain-b-tag: v8.7.0
+      chain-c-tag: v8.7.0
+      chain-d-tag: v8.7.0
       upgrade-plan-name: "v10"
       test-entry-point:  "TestUpgradeTestSuite"
       test: "TestV8ToV10ChainUpgrade_Localhost"
