--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -5,10 +5,10 @@ name: Tests / E2E
 on:
   workflow_dispatch:
   pull_request:
-    paths-ignore:
-      - 'docs/**'
-      - '**.md'
-      - 'LICENSE'
+    paths:
+      - '**/*.go'
+      - '.github/workflows/e2e.yaml'
+      - '.github/workflows/e2e-test-workflow-call.yaml'
 # cancel workflows if a new one is triggered on the same branch.
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
