--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -1,10 +1,6 @@
 name: golangci-lint
 on:
   push:
-    tags:
-      - v*
-    branches:
-      - main
   pull_request:
 permissions:
   contents: read
@@ -15,6 +11,9 @@ jobs:
   golangci:
     name: lint
     runs-on: depot-ubuntu-22.04-4
+    strategy:
+      matrix:
+        working-directory: ['.', 'modules/light-clients/08-wasm']
     steps:
       - uses: actions/setup-go@v5
         with:
@@ -22,9 +21,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v7.0.0
         with:
           version: v2.1
           only-new-issues: true
           args: --timeout 10m
+          working-directory: ${{ matrix.working-directory }}
