--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: depot-ubuntu-22.04-4
     strategy:
       matrix:
-        working-directory: ['.', 'modules/light-clients/08-wasm']
+        working-directory: ['.', 'modules/light-clients/08-wasm', 'e2e']
     steps:
       - uses: actions/setup-go@v5
         with:
@@ -23,7 +23,7 @@ jobs:
           fetch-depth: 0
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v7.0.0
+        uses: golangci/golangci-lint-action@v8.0.0
         with:
           version: v2.1
           only-new-issues: true
