e2e: Create only required number of chains. (#8371)
* sync deps

* feat: create only necessary chains

* updated changelog

* feat: default chain setings

* fix: missing tags for chain C and D

* test

* chore: remove e2e fork and draft restrictions (#8359)

* bump wasmvm to v2.2.4, go-etheruem to v1.15.11, spf13/cast to v1.8.0 (#8369)

* sync deps

* bump wasmvm to v2.2.4, go-etheruem to v1.15.11, spf13/cast to v1.8.0 (#8369)

* sync deps

* bump wasmvm to v2.2.4, go-etheruem to v1.15.11, spf13/cast to v1.8.0 (#8369)

* fix dep

* sync dep

* fix missing tags for C and D

* remove comments

---------

Signed-off-by: tamjidahmed <mail.to.tamjid@gmail.com>
Co-authored-by: Gjermund Garaba <gjermund@garaba.net>

--- a/e2e/ci-e2e-config.yaml
+++ b/e2e/ci-e2e-config.yaml
@@ -7,8 +7,8 @@
 # | CHAIN_IMAGE          | The image that will be used for the chain | ghcr.io/cosmos/ibc-go-simd   |
 # | CHAIN_A_TAG          | The tag used for chain A                  | N/A (must be set)            |
 # | CHAIN_B_TAG          | The tag used for chain B                  | N/A (must be set)            |
-# | CHAIN_C_TAG          | The tag used for chain C                  | N/A (must be set)            |
-# | CHAIN_D_TAG          | The tag used for chain D                  | N/A (must be set)            |
+# | CHAIN_C_TAG          | The tag used for chain C                  | N/A (optional; fallback to A)|
+# | CHAIN_D_TAG          | The tag used for chain D                  | N/A (optional; fallback to A)|
 # | CHAIN_BINARY         | The binary used in the container          | simd                         |
 # | RELAYER_TAG          | The tag used for the relayer              | 1.10.4                       |
 # | RELAYER_ID           | The type of relayer to use (rly/hermes)   | hermes                       |
