only lint main docs

--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -33,7 +33,7 @@ jobs:
     - uses: tj-actions/changed-files@v46
       id: changed-files
       with:
-        files: 'docs/*.md'
+        files: 'docs/docs/**/*.md'
         separator: ","
     - uses: DavidAnson/markdownlint-cli2-action@v19
       if: steps.changed-files.outputs.any_changed == 'true'
