--- a/.github/workflows/e2e-compatibility.yaml
+++ b/.github/workflows/e2e-compatibility.yaml
@@ -46,6 +46,9 @@ jobs:
   # branch is specified, only that image will be built, e.g. release-v6.0.x.
   build-release-images:
     runs-on: depot-ubuntu-22.04-4
+    permissions:
+      packages: write
+      contents: read
     strategy:
       matrix:
         release-branch:
