--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,6 @@
 # CODEOWNERS: https://help.github.com/articles/about-codeowners/
 
-*       @AdityaSripal @gjermundgaraba @srdtrk
+*       @AdityaSripal @gjermundgaraba @srdtrk @DeshErBojhaa
 /docs/  @womensrights
 
 # Our appreciation and gratitude to past code owners: @fedekunze @seantking @tmsdkeys @charleenfei @crodriguezvega @colin-axner @chatton @bznein @DimitrisJim @damiannolan
