--- a/codecov.yml
+++ b/codecov.yml
@@ -10,6 +10,8 @@ coverage:
         target: auto
         threshold: 0%
         base: auto
+comment:
+  require_changes: "coverage_drop OR uncovered_patch" # Only comment when coverage drops or there is uncovered code in the commit
 ignore:
 - ^docs.*
 - (?s:[^\/]*\.md.*)\Z
