chore: make all actions use version instead of hash

--- a/.github/workflows/e2e-compatibility.yaml
+++ b/.github/workflows/e2e-compatibility.yaml
@@ -64,7 +64,7 @@ jobs:
           fetch-depth: 0
       - name: Log in to the Container registry
         if: env.RELEASE_BRANCH == matrix.release-branch
-        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
