--- a/.github/workflows/build-simd-image-from-tag.yml
+++ b/.github/workflows/build-simd-image-from-tag.yml
@@ -29,7 +29,7 @@ jobs:
             ref: "${{ env.GIT_TAG }}"
             fetch-depth: 0
          - name: Log in to the Container registry
-           uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772
+           uses: docker/login-action@v3
            with:
               registry: ${{ env.REGISTRY }}
               username: ${{ github.actor }}
