--- a/e2e/sample.config.extended.yaml
+++ b/e2e/sample.config.extended.yaml
@@ -58,7 +58,7 @@ activeRelayer: hermes # override with RELAYER_ID
 relayers:
   - id: hermes
     image: ghcr.io/informalsystems/hermes
-    tag: "1.13.1" # override with RELAYER_TAG
+    tag: "v1.10.4" # override with RELAYER_TAG
   - id: rly
     image: ghcr.io/cosmos/relayer
     tag: "latest" # override with RELAYER_TAG
